<resources>
    <string name="app_name">TFH Care</string>
    <string name="facebook_app_id">1103838806679919</string>
    <string name="fb_login_protocol_scheme">fb1103838806679919</string>
    <string name="deep_link_url" translatable="false">healthcaremydoctor.page.link</string>
    <string name="deep_link_ios_bundle" translatable="false">com.prashant.healthcare</string>
    <string name="app_application_id" translatable="false">com.mydoctor.expert</string>
    <string name="google_places_api_key" translatable="false">AIzaSyCdMFf-RjfQpnOoKuzKD37U6-0J0s_og3w</string>
    <string name="server_client_id">960044561911-pq649ukejsu8a11v09178fhre9060mhh.apps.googleusercontent.com</string>
    <string name="pdf_link">https://thefinesthealthcare.com/generate-pdf?request_id=%s&amp;client_id=%s</string>
    <string name="update_desc">You have new update for %s!</string>
    <string name="create_a_account">Create a %s\naccount to continue</string>
    <string name="allow">ALLOW</string>
    <string name="deny">Deny</string>
    <string name="settings">Settings</string>
    <string name="media_permission">This feature needs permission to use camera and external storage.</string>
    <string name="internet">Internet</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="ok">OK</string>
    <string name="alert">Alert</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login_using_email">Login using Email</string>
    <string name="signup_with_email">Sign up with Email</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="let_s_get_started">Let’s Get Started !</string>
    <string name="we_need_your_phone">We need your Phone number to identify you.</string>
    <string name="code_sent_to">Code sent to %s</string>
    <string name="resend_code">Resend code</string>
    <string name="didn_t_receive_the_code_yet">Didn’t receive the code yet?</string>
    <string name="verification">Verification</string>
    <string name="we_sent_you_a_code">We sent you a code to %s</string>
    <string name="enter_otp">Please enter otp</string>
    <string name="location">Location</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="patients">Consultations</string>
    <string name="experience">Experience</string>
    <string name="exp">Exp. :</string>
    <string name="reviews">Reviews</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="invite_people">Invite People</string>
    <string name="version">Version %s</string>
    <string name="you_are_running_the_latest_version">You are running the latest version</string>
    <string name="appointments">Appointments</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="bio">Bio</string>
    <string name="already_register">Already Register?</string>
    <string name="by_signing_up">By Signing up you agree to our Terms of service and Privacy Policy</string>
    <string name="edit">Edit</string>
    <string name="age">Age:</string>
    <string name="phone_number">Phone Number</string>
    <string name="dob">DOB</string>
    <string name="we_need_your_email_password">We need your Email &amp; Password to identify you.</string>
    <string name="didn_t_have_an_account">Didn’t have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="wallet">Wallet</string>
    <string name="enter_name">Please enter name</string>
    <string name="select_dob">Please select DOB</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_correct_email">Please enter correct email</string>
    <string name="enter_password">Password length must be atleast 8 characters</string>
    <string name="enter_confirm_password">Password and confirm password not same</string>
    <string name="enter_bio">Please enter bio</string>
    <string name="sign_out">Sign out</string>
    <string name="logout_dialog_message">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_data_found">No data found</string>
    <string name="no_slot_found">No Slot available</string>
    <string name="select_image">Select image</string>
    <string name="select_your_option">Select your option</string>
    <string name="select_document">Select document</string>
    <string name="image">Image</string>
    <string name="document">Document</string>
    <string name="update">Update</string>
    <string name="we_need_your_email">We need your registered email to reach you</string>
    <string name="sent_password">We have sent a temporary password in your email. Please check your email.</string>
    <string name="request_sent">Request Sent successfully</string>
    <string name="password_changed_successfully">Your password changed successfully!</string>
    <string name="create_request">Create a request</string>
    <string name="create_request_message">Create a request to consult with doctor</string>
    <string name="cancel">Cancel</string>
    <string name="available_balance">Available balance</string>
    <string name="pay_out">Pay out</string>
    <string name="add_money">Add Money</string>
    <string name="add">Add</string>
    <string name="enter_amount">Please enter amount</string>
    <string name="added_to_wallet">Added to wallet</string>
    <string name="closing_balance">Closing Balance: %s</string>
    <string name="add_card">Add Card</string>
    <string name="type_your_message_here">Type your message…</string>
    <string name="photo">Photo</string>
    <string name="active_now">Active now</string>
    <string name="offline">Offline</string>
    <string name="enter_message">Enter message</string>
    <string name="typing">Typing…</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="transactions">Transaction History</string>
    <string name="money_sent_from">Paid to\n%s</string>
    <string name="money_refund_from">Refund from\n%s</string>
    <string name="added_packages">Added Packages</string>
    <string name="select_card">Select card</string>
    <string name="chat_request">Chat request</string>
    <string name="call_equest">Call request</string>
    <string name="new_request">New Request</string>
    <string name="accepted">Accepted</string>
    <string name="inprogess">In progress</string>
    <string name="no_show">No show</string>
    <string name="canceled">Cancelled</string>
    <string name="card_ending_with">%s Card ending with %s</string>
    <string name="na">NA</string>
    <string name="write_down_your_review">Write down your reviews</string>
    <string name="submit">Submit</string>
    <string name="please_give_feedback">Please give Feedback</string>
    <string name="error_select_rating">please select rating</string>
    <string name="end_chat">End Chat</string>
    <string name="end_n_chat">End\nChat</string>
    <string name="end_chat_desc">This will end chat. You will no longer be able to chat</string>
    <string name="years">years</string>
    <string name="rating">Rating</string>
    <string name="s_s_reviews">%s · %s Reviews</string>
    <string name="request_completed">Request completed</string>
    <string name="money_insufficient">You need to maintain sufficient balance to create request</string>
    <string name="schedule_request">Schedule Appointment</string>
    <string name="request_now">Meet Now</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="answer">Answer</string>
    <string name="decline">Decline</string>
    <string name="classes">Classes</string>
    <string name="class_name">Class Name</string>
    <string name="class_time">Class Time</string>
    <string name="class_price">Class Price</string>
    <string name="start_class">Start Class</string>
    <string name="join_class">Join Class</string>
    <string name="occupy_class">Occupy Class</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="join_class_message">You will be able to join class once it get started.</string>
    <string name="occupy_class_message">To occupy this CLASS you need to pay this CLASS PRICE. Are you sure yo want to proceed by making payment from wallet?</string>
    <string name="access_code">Access Code</string>
    <string name="pay_button">Pay</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="schedule_call">Schedule call</string>
    <string name="schedule_chat">Schedule chat</string>
    <string name="consult_general_physicians">Consult General\nPhysicians</string>
    <string name="book_now">Book Now</string>
    <string name="with_experts">With Experts</string>
    <string name="meet">Meet</string>
    <string name="search_for_consultant">Search for %s</string>
    <string name="at_20"><font size="14">At</font> $20</string>
    <string name="consultants">Consultants</string>
    <string name="wait_for_request">Please wait for the consultant to accept and Initiate your request</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="use_my_location">Use My Location</string>
    <string name="we_will_need_your_location">We will need your location to give you better experience</string>
    <string name="allow_your_location">Allow Your Location</string>
    <string name="profile">Profile</string>
    <string name="price_s">%s/<font size="8">%s</font></string>
    <string name="set_prefrences">Set Filter</string>
    <string name="choose_date_amp_time">Choose date &amp; time</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="clear_all">Clear All</string>
    <string name="booking_details">Booking Details</string>
    <string name="appointment_date_timings">Appointment date &amp; timings</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="date_time">%s  · %s</string>
    <string name="phone_s_s">%s-%s</string>
    <string name="add_coupon_code">Add Coupon Code</string>
    <string name="price_detail">Price Detail</string>
    <string name="sub_total">Sub-Total</string>
    <string name="total">Total</string>
    <string name="promo_applied">Promo Applied</string>
    <string name="signup_with_phone_number">Sign Up with Phone Number</string>
    <string name="you_agree_to_our_terms">By continue, you agree to our\n</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="details">Details</string>
    <string name="ask_free_questions">Ask Free Questions</string>
    <string name="show_more">show more</string>
    <string name="show_less">show less</string>
    <string name="question">Question</string>
    <string name="description">Description</string>
</resources>