<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/ask_free_questions"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:navigationIcon="@drawable/ic_back_white" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/dp_24"
                android:layout_height="match_parent">


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/startGuideLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/dp_24" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/endGuideLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/dp_24" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                    app:layout_constraintStart_toStartOf="@id/startGuideLine"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/campton_medium"
                        android:hint="@string/question"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLength="100"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/sp_16" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingTop="@dimen/dp_12"
                    android:background="@drawable/drawable_stroke_grey"
                    app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                    app:layout_constraintStart_toStartOf="@id/startGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/tlTitle">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/campton_medium"
                        android:gravity="start"
                        android:hint="@string/description"
                        android:background="@null"
                        android:imeOptions="actionDone"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLength="1000"
                        android:padding="@dimen/dp_8"
                        android:maxLines="10"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/sp_16" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_24"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:background="@drawable/drawable_theme_40"
                    android:fontFamily="@font/campton_semibold"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tlDesc" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>